--- a/app/src/main/res/layout/fragment_pokemon_details.xml
+++ b/app/src/main/res/layout/fragment_pokemon_details.xml
@@ -89,7 +89,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/name" />
 
                 <TextView
-                    android:id="@+id/width"
+                    android:id="@+id/weight"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
